[package]
name = "storage"
version = "0.2.1"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19"
serde_json = "1.0"
russh = "0.54.5"
russh-sftp = "2.1.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
serde_json = "1.0"
